correcting graph overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,6 @@
+
 body {
     font-family: 'Montserrat', sans-serif;
-}
-
-
-html {
-    height: 100%;
 }
 
 
@@ -43,24 +39,23 @@ html {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     margin: 0;
     height: 100%;
 }
 
 
 #banner {
-    padding-top: 10px;
+    margin-top: 30px;
+    padding: 20px;
     background-color: #15113a;
     color: white;
     width: 100%;
-    min-height: 15vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: start;
     text-align: center;
-    margin-bottom: 20px;
 }
 
 
@@ -75,6 +70,8 @@ html {
     display: flex;
     justify-content: space-evenly;
     color: white;
+    height: 20%;
+    gap: 10px;
 
 }
 
@@ -95,10 +92,18 @@ html {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    width: 20%;
     padding: 15px;
 
 }
+
+.quantity {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
 
 footer {
     background-color: #9296d8;
@@ -130,25 +135,19 @@ footer {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: space-between;
-    font-size: 1vw;
+    justify-content: center;
+    gap: 10px;
+    font-size: 1rem;
 }
 
 .titleCard {
     font-family: "Montserrat", "Arial", "Helvetica";
-    font-size: 1.2vw;
+    font-size: 1rem;
     text-transform: uppercase;
     font-weight: bold;
 }
 
 
-.quantity {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
 
 #circle {
     display: flex;
@@ -171,3 +170,19 @@ footer {
     font-size: 1rem;
     text-align: center;
   }
+
+  @media (max-width: 480px) {
+    #divChart {
+        height: 65vh;
+    }
+    .radio{
+        justify-content: start;
+        font-size: 0.8rem;
+    }
+}
+
+@media (min-width: 480px) {
+    #divChart {
+        height: 80vh;
+    }
+}
